--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
-    "phonepe-payment-capacitor": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-mobile-capacitor-sdk/phonepe-payment-capacitor-1.0.0.tgz",
+    "phonepe-payment-capacitor": "https://phonepe.mycloudrepo.io/public/repositories/phonepe-mobile-capacitor-sdk/releases/v2/phonepe-payment-capacitor.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
